--- a/artec/artec.vcxproj
+++ b/artec/artec.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="artec.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
